--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.09.2022 08:05:53</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.09.2022 09:09:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Pondělí, 26. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kari polévka s koriandrem a zázvorem</strong>
+<strong>V období 28.-30.9. bude jídelna ZAVŘENA</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Květáková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec s hořčičnou omáčkou a pečeným bramborem</strong>
+<strong>Hovězí stroganov s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							149,-
+						</span>
+</p>
+<p>
+<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Skořicové lívance s jahodami a jahodovým jogurtem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							125,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: kuřecí špalky, kuřecí stripsy, Tilapie, brambor Smetanovy, ryze, zelenina</strong>
+<strong>TEPLÝ BUFET: žebra, kukuřička, kuskus, rýže, pečený brambor, Tilapie na Smetanové cibulce</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: okurkový s cesnekovym dresinkem, trhany s rukolou</strong>
+<strong>SALÁTY: Míchaný s pazitkou, kuskus s rajčaty a limetkovým dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 26.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie  (bez lepku) </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechový košíček s čokoládou   (bez lepku) </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Kokosová panna cotta s malinami  (bez lepku, bez laktózy) </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z pečeného celeru s tymiánem v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z pečeného celeru s tymiánem samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Uzená krkovice, bramborová kaše s křenem, zelný salát <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Špenátové noky s kuřecím masem, smetana, parmazán, ředkvička <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Grilovaný camembert, kuskus s pečenou dýní, brusinkami a restovanými ořechy <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +145,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske massaman kari s kousky rybich filetu {hejk, makrela}, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 155</li><li>Smazena cerstva norska treska, tatarska omacka, pecene brambory, salatek, citron {L} 179</li><li>Korejske veprove ribsy v miso marinade se sezamem, medem, spetkou chilli a zelenou cibulkou, smazena zeleninova ryze, salatek 155</li><li>Grilovane medailonky z krutich prsou s filipinskym bananovym catny, smazena zeleninova ryze, salatek 179</li><li>Vegetarianska musaka s cuketami, rajcaty, bramborami a maslovymi fazolemi zapecena ve smetanove omacce, salatek {L} 155</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s pestem s bylinkovym pestem se susenymi rajcaty, jahly s pecenou zeleninou, salatek 155</li><li>Pecena cerstva gronska kambala a filet z candata s bylinkovym pestem se susenymi rajcaty, jahly s pecenou zeleninou, salatek 185</li><li>Burrito s mexickym carnitas {trhane veprove s pecenymi palivymi paprikami} a goudou, bylinkovy jogurt, korenena ryze, salatek {L} 155</li><li>Grilovana kruti jatra s merunkovou omackou, gratinovane brambory se syrem, salatek 175</li><li>Smazene zampiony portobello, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
 </td>
 </tr>
 </table>
